@@ -1,3 +1,10 @@
+2007-06-27  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclCmdMZ.c:	Corrected broken trace reversal logic in
+	* generic/tclTest.c:	TclCheckInterpTraces that led to infinite loop
+	* tests/basic.test:	when multiple Tcl_CreateTrace traces were set and
+	one of them did not fire due to level restrictions.  [Bug 1743931].
+
 2007-06-23  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/tclMacOSXNotify.c (AtForkChild): don't call CoreFoundation
